--- a/playbooks/install_yara.yml
+++ b/playbooks/install_yara.yml
@@ -6,8 +6,9 @@
     - dnf:
         name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
         state: present
+        disable_gpg_check: true
       become: true
-      
+
     - dnf:
         name: 
           - yara
