add register process

--- a/playbooks/install_yara.yml
+++ b/playbooks/install_yara.yml
@@ -23,6 +23,13 @@
     - debug:
         var: test_connection
 
+    - command: insights-client --register
+      register: register
+      become: true
+
+    - debug:
+        var: register
+
     - command: insights-client --collector malware-detection
       register: collect_malware_detection
       become: true
